chore(docs): add token confirmation for reset the password to Swagger
